10. Filtering and Sorting Rows

--- a/10. Filtering and Sorting Rows.ipynb
+++ b/10. Filtering and Sorting Rows.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 11: Filtering and Sorting Rows"
+    "# 10. Filtering and Sorting Rows"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tools.filter(pl.col(\"cordless\") & (pl.col(\"brand\") == \"Makita\"))  "
+    "tools.filter(pl.col(\"cordless\") & (pl.col(\"brand\") == \"Makita\"))"
    ]
   },
   {
@@ -378,7 +378,11 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
