--- a/2. Configuring Polars.ipynb
+++ b/2. Configuring Polars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
    ],
    "source": [
     "import polars as pl\n",
-    "pl.__version__  # The book is built with Polars version 1.20.0"
+    "pl.__version__  "
    ]
   },
   {
