--- a/17. Internals.ipynb
+++ b/17. Internals.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import polars as pl\n",
-    "pl.__version__  # The book is built with Polars version 1.20.0"
+    "pl.__version__  "
    ]
   },
   {
