--- a/9. Selecting and Creating Columns.ipynb
+++ b/9. Selecting and Creating Columns.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
    ],
    "source": [
     "import polars as pl\n",
-    "pl.__version__  # The book is built with Polars version 1.20.0"
+    "pl.__version__  "
    ]
   },
   {
